# 21sh

./: .gitignore  .zsh_history  Bonuses.txt  CMakeLists.txt  Makefile  README.md  TODO.todo  TO_DO.todo  a  b  c  pipe_example.c  rediractions_example.c  test.txt  test_main.c
includes/core/: builtin.h  builtin_static_box.h  info.h  messages.h  shell.h  syntax_characters.h  tokens.h
includes/environ_manipulation/: environ_manipulation.h
includes/line_parser/: line_parser.h
includes/read_line/: auto_completion.h  button_keys.h  heredoc.h  history_search.h  keys.h  line_syntax.h  read_line.h  read_line_signals.h
libft/: Makefile  lst  test  test_main.c
libft/includes/containers/: ft_cnt_general.h  ft_containers.h  ft_hash_table.h  ft_list.h
libft/includes/get_next_line/: get_next_line.h
libft/includes/libc/: ft_def.h  ft_hash_table.h  ft_is.h  ft_lst.h  ft_other.h  ft_str.h  ft_sys.h  libft.h
libft/includes/printf/: ft_printf.h
libft/source/containers/: ft_delptr.c
libft/source/get_next_line/: get_next_line.c
libft/source/printf/: fpf_lobi.c  fpf_parser_get_type.c  fpf_trash.c  fpf_unicode.c  ft_printf.c
source/core/: main.c
source/environ_manipulation/: env_convert.c  env_free.c  env_get.c  env_make_clone.c  env_print.c  env_set.c  env_unset.c
source/line_parser/: line_parser.c  lp_arg_buf_control.c  lp_cmd_manipulation.c  lp_push.c  lp_utility.c
source/read_line/: read_line.c  rl_edit_line.c  rl_history.c  rl_init.c  rl_join_new_data_to_line.c  rl_make_tc_magic.c  rl_modify_line.c  rl_move_cursor.c  rl_signals.c  rl_utility.c
test/: 123
(+175 files in other folders)
